# iranika_os

./: Cargo.toml  Readme.md  VGAテキストモード.md  rust-toolchain  ちいさなRustKernel.md  独立した自由なRustのバイナリ.md
src/: main.rs  vga_buffer.rs
