[package]
name = "iranika_os"
version = "0.1.0"
authors = ["iranika <7370486+iranika@users.noreply.github.com>"]

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-iranika_os.json"